# market-analytics

./: .gitignore  BitcoinGeometricProgression.ipynb  LICENSE  README.md  conda-env.yml  pyproject.toml
images/: project_ranking.html
market_analytics/: __init__.py  helpers.py
market_analytics/fitmethods/: poissonianlikemethods.py
notebooks/: 01_FuturesOpenInterestAnalyzer.ipynb  02_ProjectValuation.ipynb  07_OrderbookDeltaAnalyzer.ipynb  08_BitcoinVolatilityAndCorrelation.ipynb  0_BitcoinGeometricProgression.ipynb  10_OverallAnalysis.ipynb  11_ArbitrumDAOVotes.ipynb  12_HPDR_indicator.ipynb  13_PriceStatistics.ipynb  8_BitcoinVolatility.ipynb  8_BitcoinVolatilityAndCorrelation.ipynb  9_BitcoinSinusoids.ipynb  BitcoinGeometricProgression.ipynb  BitcoinSinusoids.ipynb  BitcoinVolatility.ipynb  CFMM.ipynb  CryptoInterestRateCorrelation.ipynb  FuturesOpenInterestAnalyzer.ipynb  HawkesProcesses.ipynb  Makefile  MessariEmployeeCryptoHoldings.ipynb  OrderbookDeltaAnalyzer.ipynb  ProjectValuation.ipynb  TimeCorrelation.ipynb
src/: analysis_logic.py  ftx_websocket_client.py  ftx_websocket_manager.py  helpers.py  orderbook_delta_generator.py  orderbook_delta_strategies.py  orderbook_delta_visualizer.py  orderbook_generator.py  qudi_fit_logic.py
src/fitmethods/: antibunchingmethods.py  decaylikemethods.py  gaussianlikemethods.py  hyperbolicsaturationmethods.py  linearmethods.py  lorentzianlikemethods.py  sinemethods.py
