[tool.poetry]
name = "market-analytics"
version = "0.1.0"
description = "A set of Jupyter Notebooks and Python tools to quantitatively analyze the crypto markets."
authors = ["dineshpinto <dkpinto95@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "market_analytics"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^3.5.2"
numpy = "^1.24.0"
matplotlib = "^3.6.2"
pandas = "^1.5.2"
scipy = "^1.9.3"
statsmodels = "^0.13.5"
pycoingecko = "^3.1.0"
scikit-learn = "^1.2.0"
seaborn = "^0.12.1"
web3 = "^5.31.3"
lmfit = "^1.1.0"
ccxt = "^2.4.43"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
