[tool.poetry]
name = "market-analytics"
version = "0.1.0"
description = "Random crypto market analytics"
authors = ["dineshpinto <annual.fallout_0z@icloud.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "market_analytics" }]

[tool.poetry.dependencies]
python = ">3.10,<3.13"
jupyterlab = "^4.0.0"
numpy = "^1.24.0"
matplotlib = "^3.6.2"
pandas = "^2.0.0"
scipy = "^1.10.0"
statsmodels = "^0.14.0"
pycoingecko = "^3.1.0"
scikit-learn = "^1.2.0"
seaborn = "^0.13.0"
web3 = "^6.4.0"
lmfit = "^1.1.0"
ccxt = "^4.0.0"
yfinance = "^0.2.3"
defillama2 = "^0.7.2"
python-dotenv = "^1.0.0"
coinglass-api = "^1.0.0"
python-binance = "^1.0.16"
ipykernel = "^6.22.0"
ruff = "^0.1.9"
ruff-lsp = "^0.0.48"
notebook = "^7.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
